Simple shadow added to the h2 element

--- a/evelyn_charles_WIA_Presentation/evelyn_charles_WIA_webFiles/css/demostyle.css
+++ b/evelyn_charles_WIA_Presentation/evelyn_charles_WIA_webFiles/css/demostyle.css
@@ -245,6 +245,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', end
 	border-radius: 2px;
 }
 
+section h2 {
+	text-shadow: 0.125em 0.125em 0.125em #000;
+}
+
 article {
 	width: 45%;
 	margin: 10px;
